Navbar on mobile mode added, style fixes, scrollbar removed in mobile mode

--- a/packages/plugin-giphy/statics/styles/giphy-api-input-modal.scss
+++ b/packages/plugin-giphy/statics/styles/giphy-api-input-modal.scss
@@ -26,39 +26,39 @@
   direction: rtl;
 }
 
-.line {
-  width: 100%;
-  size: 0px;
-  height: 2px;
-  background-color: #c8c8c8;
-  margin-top: 6px;
-
-}
-
-.trending {
-  font-family: Helvetica;
-  font-size: 10px;
-  font-style: oblique;
-  color: rgba(0, 0, 0, 0.3);
-  width: 49%;
-  display: inline-block;
-}
-
-.powerdByGiphy {
-  font-family: Helvetica;
-  font-size: 10px;
-  font-style: oblique;
-  color: rgba(0, 0, 0, 0.3);
-  width: 49%;
-  direction: rtl;
-  display: inline-block;
-}
-
 .closeIcon {
   width: '11px';
   height: '11px';
 }
-
+.navbar{
+  width: 100%;
+  height: 50px ;
+  background-color: #0060ff;
+  vertical-align: middle;
+  padding-top: 20px;
+  text-align: center;
+ 
+  font-family: Helvetica;
+  font-size: 14px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+}
+.backButton{
+  position: absolute;
+  top: 37.5px;
+  left: 23.5px;
+  width: 200px;
+  width: 12px;
+  height: 12px;
+  transform: rotate(45deg);
+  border-bottom: solid 1px #ffffff;
+  border-left: solid 1px #ffffff;
+}
 .giphyUrlInputModal_textInput {
   top: 0;
   left: 0;
